--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,9 +7,44 @@
     tools:context=".welcomeactivities.RegisterActivity">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_centerInParent="true"
-        android:id="@+id/regprofileimage"/>
+        android:id="@+id/regprofileimage"
+        android:background="@drawable/background"/>
+
+    <EditText
+        android:id="@+id/regusername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_below="@+id/regprofileimage"
+        android:hint="Username"
+        android:textAlignment="center"/>
+
+    <EditText
+        android:id="@+id/regdob"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_below="@+id/regusername"
+        android:hint="Date Of Birth"
+        android:textAlignment="center"/>
+
+    <EditText
+        android:id="@+id/reggender"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:maxLines="1"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_below="@+id/regdob"
+        android:hint="Gender"
+        android:textAlignment="center"/>
 
 </RelativeLayout>
