--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -36,15 +36,30 @@
         android:hint="Date Of Birth"
         android:textAlignment="center"/>
 
-    <EditText
-        android:id="@+id/reggender"
-        android:layout_width="match_parent"
+    <RadioGroup
+        android:id="@+id/radioGroup"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxLines="1"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
         android:layout_below="@+id/regdob"
-        android:hint="Gender"
-        android:textAlignment="center"/>
+        android:layout_centerHorizontal="true"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/radio_one"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="   Male"
+            android:onClick="checkButton"
+            android:checked="true"/>
+
+        <RadioButton
+            android:id="@+id/radio_two"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="   Female"
+            android:layout_marginLeft="60dp"
+            android:onClick="checkButton"/>
+
+    </RadioGroup>
 
 </RelativeLayout>
