--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,7 +11,7 @@
         android:layout_height="100dp"
         android:layout_centerInParent="true"
         android:id="@+id/regprofileimage"
-        android:background="@drawable/background"/>
+        android:src="@drawable/backgroundone"/>
 
     <EditText
         android:id="@+id/regusername"
@@ -61,5 +61,15 @@
             android:onClick="checkButton"/>
 
     </RadioGroup>
+
+    <Button
+        android:id="@+id/submit_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        android:background="@drawable/backgroundone"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"/>
 
 </RelativeLayout>
