--- a/app/src/main/res/menu/home_bottom_navigation.xml
+++ b/app/src/main/res/menu/home_bottom_navigation.xml
@@ -2,15 +2,15 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:id="@+id/nav_home"
-        android:icon="@drawable/chat"
+        android:icon="@drawable/home"
         android:title=""/>
 
     <item android:id="@+id/nav_favourites"
-        android:icon="@drawable/chat"
+        android:icon="@drawable/message"
         android:title=""/>
 
     <item android:id="@+id/nav_search"
-        android:icon="@drawable/chat"
+        android:icon="@drawable/settingss"
         android:title=""/>
 
 </menu>
